// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceInfo renders correctly with only required props 1`] = `
<div
  className="place-card__info"
>
  <div
    className="place-card__price-wrapper"
  >
    <div
      className="place-card__price"
    >
      <b
        className="place-card__price-value"
      >
        €
        120
      </b>
      <span
        className="place-card__price-text"
      >
        / night
      </span>
    </div>
    <button
      className="place-card__bookmark-button  button"
      type="button"
    >
      <svg
        className="place-card__bookmark-icon"
        height="19"
        width="18"
      >
        <use
          xlinkHref="#icon-bookmark"
        />
      </svg>
      <span
        className="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>
  <div
    className="place-card__rating rating"
  >
    <div
      className="place-card__stars rating__stars"
    >
      <span
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <span
        className="visually-hidden"
      >
        Rating
      </span>
    </div>
  </div>
  <h2
    className="place-card__name"
  >
    <a
      href="#"
    >
      Beautiful & luxurious apartment at great location
    </a>
  </h2>
  <p
    className="place-card__type"
  />
</div>
`;

exports[`PlaceInfo renders correctly with props 1`] = `
<div
  className="place-card__info"
>
  <div
    className="place-card__price-wrapper"
  >
    <div
      className="place-card__price"
    >
      <b
        className="place-card__price-value"
      >
        €
        120
      </b>
      <span
        className="place-card__price-text"
      >
        / night
      </span>
    </div>
    <button
      className="place-card__bookmark-button place-card__bookmark-button--active button"
      type="button"
    >
      <svg
        className="place-card__bookmark-icon"
        height="19"
        width="18"
      >
        <use
          xlinkHref="#icon-bookmark"
        />
      </svg>
      <span
        className="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>
  <div
    className="place-card__rating rating"
  >
    <div
      className="place-card__stars rating__stars"
    >
      <span
        style={
          Object {
            "width": "93%",
          }
        }
      />
      <span
        className="visually-hidden"
      >
        Rating
      </span>
    </div>
  </div>
  <h2
    className="place-card__name"
  >
    <a
      href="#"
    >
      Beautiful & luxurious apartment at great location
    </a>
  </h2>
  <p
    className="place-card__type"
  >
    Apartment
  </p>
</div>
`;
